<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SparePartsToo settings</string>
    <string name="application_settings_title_head">Application</string>
    <string name="application_settings_title_subhead">Application settings</string>
    <string name="application_settings_summary_head">Application moving, install location</string>
    <string name="display_settings_title_head">Display</string>
    <string name="display_settings_title_subhead">Display settings</string>
    <string name="display_settings_summary_head">Display animations, backlight settings</string>
    <string name="input_settings_title_head">Input</string>
    <string name="input_settings_title_subhead">Input settings</string>
    <string name="input_settings_summary_head">Input behavior, buttons</string>
    <string name="interface_settings_title_head">Interface</string>
    <string name="interface_settings_title_subhead">Interface settings</string>
    <string name="interface_settings_summary_head">Interface tweaks, overscrolling, render effect</string>
    <string name="lockscreen_settings_title_head">Lockscreen</string>
    <string name="lockscreen_settings_title_subhead">Lockscreen settings</string>
    <string name="lockscreen_settings_summary_head">unlock options</string>
    <string name="performance_settings_title_head">Performance</string>
    <string name="performance_settings_title_subhead">Performance settings</string>
    <string name="performance_settings_summary_head">Performance tweaks, JIT, VM heap size</string>
    <string name="sound_settings_title_head">Sound</string>
    <string name="sound_settings_title_subhead">Sound settings</string>
    <string name="sound_settings_summary_head">Sound volumes, audio focus, quiet hours</string>
    <string name="system_settings_title_head">System</string>
    <string name="system_settings_title_subhead">System settings</string>
    <string name="ui_title">User interface</string>
    <string name="ui_summary">User interface settings &amp; tweaks</string>
    <string name="pref_electron_beam_animation_on">Screen-on animation</string>
    <string name="pref_electron_beam_animation_off">Screen-off animation</string>
    <string name="trackball_title">LED notifications</string>
    <string name="trackball_summary">Control trackball/LED notification colors and pulse</string>
    <string name="ui_webview_title">WebView</string>
    <string name="pref_pinch_reflow_title">Reflow after pinch in</string>
    <string name="pref_pinch_reflow_summary">Reflow webview content immediately after pinch to zoom in</string>
    <string name="ui_overscroll_title">Overscrolling</string>
    <string name="pref_overscroll_title">Overscroll effect</string>
    <string name="pref_overscroll_summary">Choose how scrollable objects look when they overshoot</string>
    <string name="pref_overscroll_weight_title">Overscrolling weight</string>
    <string name="pref_overscroll_weight_summary">Select the weight of the scrollable objects</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="msg_color_picker">Tap on center color to confirm.\nPress back to cancel</string>
    <string name="trackball_notifications_title">LED notification colors</string>
    <string name="dialog_color_trackball">Choose a color</string>
    <string name="dialog_blink_trackball">Choose a blink rate</string>
    <string name="color_trackball_flash_title">Flash color</string>
    <string name="color_trackball_flash_summary">Color to flash</string>
    <string name="color_trackball_custom_title">Custom color</string>
    <string name="color_trackball_custom_summary">Custom color to flash</string>
    <string name="color_trackball_blink_title">Blink rate</string>
    <string name="color_trackball_blink_summary">Blink rate</string>
    <string name="color_trackball_test_title">Flash test</string>
    <string name="color_trackball_test_summary">Test the flash</string>
    <string name="dialog_clear_flash">Clear Flash</string>
    <string name="trackball_advanced_title">Advanced</string>
    <string name="pref_trackball_screen_title">Always pulse</string>
    <string name="pref_trackball_screen_summary">LED will pulse while screen is on</string>
    <string name="pref_trackball_blend_title">Blend notifications</string>
    <string name="pref_trackball_blend_summary">Blend notification colors. Overrides succession</string>
    <string name="pref_trackball_sucess_title">Succession</string>
    <string name="pref_trackball_sucess_summary">Pulse notifications in succession</string>
    <string name="pref_trackball_random_title">Random colors</string>
    <string name="pref_trackball_random_summary">Pulses the LED in random colors for all notifications</string>
    <string name="pref_trackball_order_title">Pulse in order</string>
    <string name="pref_trackball_order_summary">Pulses the LED color in order</string>
    <string name="pref_trackball_reset_title">Reset</string>
    <string name="pref_trackball_reset_summary">Reset all colors and apps</string>
    <string name="dialog_trackball_loading">Loading\u2026</string>
    <string name="dialog_trackball_packagelist">Loading package list</string>
    <string name="trackball_category_dialog_text">Please enter a new category</string>
    <string name="trackball_category_list_title">Category</string>
    <string name="trackball_category_list_summary">Choose a category</string>
    <string name="trackball_category_screen">Manage categories</string>
    <string name="trackball_category_add_title">Add category</string>
    <string name="trackball_category_add_summary">Add a category to the list</string>
    <string name="trackball_category_remove_title">Remove category</string>
    <string name="trackball_category_remove_summary">Remove a category from the list</string>
    <string name="trackball_remove_default_toast">Can\'t remove this category as it is the default one.</string>
    <string name="trackball_reset_all">Reset all colors and categories.</string>
    <string name="trackball_array_error">Unfortunately there was an array error. This package has been forced into the Miscellaneous category.</string>
    <string name="trackball_color_notice_title">NOTE:</string>
    <string name="trackball_color_notice_summary">Not all colors will display on all devices</string>
    <string name="trackball_color_entry_green">Green</string>
    <string name="trackball_color_entry_white">White</string>
    <string name="trackball_color_entry_red">Red</string>
    <string name="trackball_color_entry_blue">Blue</string>
    <string name="trackball_color_entry_yellow">Yellow</string>
    <string name="trackball_color_entry_cyan">Cyan</string>
    <string name="trackball_color_entry_magenta">Magenta</string>
    <string name="trackball_color_entry_pink">Pink</string>
    <string name="trackball_color_entry_orange">Orange</string>
    <string name="trackball_color_entry_light_blue">Light Blue</string>
    <string name="trackball_color_entry_random">Random</string>
    <string name="trackball_color_entry_none">None</string>
    <string name="trackball_color_entry_amber">Amber</string>
    <string name="notification_battery_warning_title">WARNING: May cause battery drain</string>
    <string name="notification_battery_warning">This option has been proven to increase the amount of battery drain by ~3% per hour. If you notice an increase in drain during trackball lights pulsing then this option is why. Do not enable if you don\'t wish to incur the drain.</string>
    <string name="pref_lockscreen_widgets_title">Widget options</string>
    <string name="pref_lockscreen_widgets_summary">Enable or disable various widgets on the lockscreen</string>
    <string name="pref_lockscreen_unlock_title">Unlock options</string>
    <string name="pref_lockscreen_unlock_summary">Controls button unlocking and quick unlock</string>
    <string name="pref_lockscreen_timeout_title">Delay and timeout</string>
    <string name="pref_lockscreen_timeout_summary">Configure screen timeout delay and screen turn off delay</string>
    <string name="lockscreen_settings_title">Lockscreen settings</string>
    <string name="pref_lockscreen_always_battery_title">Always display battery status</string>
    <string name="pref_lockscreen_always_battery_summary">Display battery status on the lockscreen at all times</string>
    <string name="pref_lockscreen_music_controls_title">Lockscreen music controls</string>
    <string name="pref_lockscreen_music_controls_summary">Display music controls on the lockscreen</string>
    <string name="pref_lockscreen_now_playing_title">Display song name</string>
    <string name="pref_lockscreen_now_playing_summary">Display the name and artist of the song currently playing</string>
    <string name="pref_lockscreen_album_art_title">Display album art</string>
    <string name="pref_lockscreen_album_art_summary">Display the album art of the current song. Only works with stock music player in portrait mode</string>
    <string name="pref_lockscreen_music_headset_title">Display music controls with headset</string>
    <string name="pref_lockscreen_music_headset_summary">Display music controls when a wired headset and/or Bluetooth A2DP headset is connected</string>
    <string name="pref_lockscreen_always_music_controls_title">Always display music controls</string>
    <string name="pref_lockscreen_always_music_controls_summary">Display music controls regardless of whether or not music is playing</string>
    <string name="pref_trackball_wake_title">Trackball wake</string>
    <string name="pref_trackball_wake_summary">Pressing the trackball wakes the device</string>
    <string name="pref_volume_wake_title">Volume rocker wake</string>
    <string name="pref_volume_wake_summary">Pressing the volume up/down wakes the device. Intended for devices with hard to press power key</string>
    <string name="pref_trackball_unlock_title">Trackball unlock</string>
    <string name="pref_trackball_unlock_summary">Pressing the trackball unlocks the device</string>
    <string name="pref_menu_unlock_title">Menu unlock</string>
    <string name="pref_menu_unlock_summary">Pressing the menu button unlocks the device</string>
    <string name="pref_lockscreen_quick_unlock_control_title">Quick Unlock</string>
    <string name="pref_lockscreen_quick_unlock_control_summary">No need to press OK when entering Pin or Password. Delete counts as bad try</string>
    <string name="pref_volbtn_music_controls_title">Volume button music controls</string>
    <string name="pref_volbtn_music_controls_summary">Seek music tracks when long-pressing the volume buttons while screen off</string>
    <string name="pref_cambtn_music_controls_title">Camera button music control</string>
    <string name="pref_cambtn_music_controls_summary">Toggle play/pause when long-pressing the camera button while screen off</string>
    <string name="lockscreen_widgets_note_title">Note</string>
    <string name="lockscreen_widgets_note_summary">Choosing minimalistic lense style hides all widgets except music control. Yet below options are not unset to allow easy switching to other styles</string>
    <string name="input_settings_title">Input settings</string>
    <string name="input_settings_summary">Control button behavior</string>
    <string name="button_settings_title">Button settings</string>
    <string name="recent_apps_show_title">Show recent apps title</string>
    <string name="recent_apps_num_title">Number of recent apps</string>
    <string name="general_title">General</string>
    <string name="buttons_title">Buttons</string>
    <string name="user_defined_key1">Quick Key 1</string>
    <string name="user_defined_key2">Quick Key 2</string>
    <string name="user_defined_key3">Quick Key 3</string>
    <string name="user_defined_not_set">Nothing Set</string>
</resources>