<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/buttons_title"
		android:key="pref_category_button_settings">

		<CheckBoxPreference android:key="pref_trackball_wake"
			android:title="@string/pref_trackball_wake_title" android:summary="@string/pref_trackball_wake_summary" />

        <CheckBoxPreference android:key="pref_volume_wake"
            android:title="@string/pref_volume_wake_title"
            android:summary="@string/pref_volume_wake_summary" />

		<CheckBoxPreference android:key="pref_volbtn_music_controls"
			android:title="@string/pref_volbtn_music_controls_title"
			android:summary="@string/pref_volbtn_music_controls_summary" />

		<CheckBoxPreference android:key="pref_cambtn_music_controls"
			android:title="@string/pref_cambtn_music_controls_title"
			android:summary="@string/pref_cambtn_music_controls_summary" />

		<Preference android:key="pref_user_defined_key1"
			android:title="@string/user_defined_key1" android:summary="@string/user_defined_not_set" />
		<Preference android:key="pref_user_defined_key2"
			android:title="@string/user_defined_key2" android:summary="@string/user_defined_not_set" />
		<Preference android:key="pref_user_defined_key3"
			android:title="@string/user_defined_key3" android:summary="@string/user_defined_not_set" />

	</PreferenceCategory>

</PreferenceScreen>
