<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_title"
        android:key="pref_category_button_settings">

        <PreferenceScreen android:key="lockscreen_widgets"
            android:title="@string/pref_lockscreen_widgets_title"
            android:summary="@string/pref_lockscreen_widgets_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.faux123.SparePartsToo"
                android:targetClass="com.faux123.SparePartsToo.activities.LockscreenWidgetsActivity" />
        </PreferenceScreen>

        <PreferenceScreen android:key="lockscreen_unlock"
            android:title="@string/pref_lockscreen_unlock_title"
            android:summary="@string/pref_lockscreen_unlock_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.faux123.SparePartsToo"
                android:targetClass="com.faux123.SparePartsToo.activities.LockscreenUnlockActivity" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
